# DnD5e-AI-Build-Optimizer

./: .gitignore  Cargo.toml
src/: armor.rs  character.rs  class.rs  combat.rs  equipment.rs  item.rs  main.rs  species.rs  spells.rs  styles.css  subclass.rs  unit.rs  weapon.rs
src/Data/: armors.json  items.json  species.json  spells.json
src/EnemyUnits/: goblin.json
src/Items/: armor.json  armors.json  goblin.json  weapon.json  weapons.json
src/resources/de/: main.ftl
src/resources/en-US/: main.ftl
src/resources/ja/: main.ftl
