[package]
name = "dnd_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
vizia = {git = "https://github.com/vizia/vizia", branch = "skia"}
rand = "0.8.5"
num = "0.4.3"
serde_json = "^1.0"
serde = { version = "1.0", features = ["derive"] }
rfd = "*"
nalgebra = { version = "*", features = ["serde-serialize"] }
